Fix selected channel arrow jumping when selected

--- a/src/components/primary/channels/_channels.scss
+++ b/src/components/primary/channels/_channels.scss
@@ -68,6 +68,9 @@
     background-color: #FFF;
     transform: rotate(45deg);
 }
+.channels-wrap div[class*="contentSelectedText"]:active{
+    transform: initial;
+}
 .channels-wrap div[class*="contentSelectedText"] > .margin-reset > svg{
     opacity: 1;
 }
